# Item-Manage-System

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .test-files-checklist.md  CHANGELOG.md  DOCKER_POSTGRES_GUIDE.md  DOCS_INDEX.md  Deployment_Guide_zh-TW.md  Dockerfile  Dockerfile.test  FEATURES.md  GUIDE_ZH-TW.md  MCP_SKILLS_SETUP.md  Makefile  QUICK_START.md  README.md  README_EN.md  SETUP.md  TESTING.md  TESTING_QUICK_START.md  TEST_SETUP_SUMMARY.md  UNIT_TEST_COMPLETE.md  User_Manual_zh-TW.md  alembic.ini  app.py  babel.cfg  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  requirements.txt  run.py  run_tests.py  run_tests.sh  run_tests_uv.sh  (+8 more)
apps/api/: Dockerfile  alembic.ini  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_users.py  0002_user_preferences.py  0003_items_taxonomy.py  0004_notifications_and_min_quantity.py  0005_lists.py  0006_collaboration.py  0007_favorites_tokens_audit.py  0008_images.py  0009_customization_and_history.py  0010_stocktake.py  0011_external_channels.py  0012_warehouses.py  0013_webhooks.py  0014_locations_advanced.py  0015_webhook_retry.py
apps/api/app/: config.py  main.py
apps/api/app/auth/: dependencies.py  jwt.py
apps/api/app/db/: base.py  session.py
apps/api/app/models/: __init__.py  category.py  customization.py  external_channels.py  favorite_audit_token.py  group.py  image.py  item.py  item_history.py  list.py  loan.py  location.py  notification.py  stocktake.py  tag.py  transfer.py  user.py  warehouse.py  webhook.py
apps/api/app/repositories/: categories_repository.py  groups_repository.py  items_repository.py  list_entries_repository.py  lists_repository.py  loans_repository.py  locations_repository.py  notifications_repository.py  preferences_repository.py  stats_repository.py  tags_repository.py  (+2 more)
apps/api/scripts/: export_openapi.py
apps/api/tests/: conftest.py  test_admin_routes.py  test_ai.py  test_api_tokens.py  test_audit_log.py  test_auth.py  test_auth_utils.py  test_backup.py  test_categories_routes.py  test_collab_schemas.py  test_config.py  test_customization.py  test_external_channels.py  test_favorites.py  test_group_model_smoke.py  test_groups_repository.py  test_groups_routes.py  test_groups_service.py  test_health.py  test_images.py  test_item_history.py  test_item_min_quantity_smoke.py  test_item_owner_smoke.py  test_items_bulk.py  test_items_repository.py  test_items_routes.py  test_items_service.py  test_labels.py  test_list_entries_repository.py  test_list_model_smoke.py  test_list_schemas.py  test_lists_repository.py  test_lists_routes.py  test_lists_service.py  test_loan_model_smoke.py  test_loans_repository.py  test_loans_routes.py  test_loans_service.py  test_location_advanced.py  test_locations_routes.py  (+27 more)
(+510 files in other folders)
