[project]
name = "item-manage-system"
version = "1.0.0"
description = "Item Management System"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0.0",
    "Flask-PyMongo>=2.3.0",
    "flask_login>=0.6.0",
    "Pillow>=10.0.0",
    "Werkzeug>=3.0.0",
    "requests>=2.31.0",
    "qrcode>=7.4.0",
    "python-barcode>=0.15.0",
    "Flask-WTF>=1.2.0",
    "Flask-Limiter>=3.5.0",
    "Flask-Mail>=0.10.0",
    "APScheduler>=3.10.0",
    "SQLAlchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "gunicorn>=21.0.0",
    "alembic>=1.12.0",
    "Flask-Caching>=2.1.0",
    "redis>=5.0.0",
    "limits>=3.7.0",
    "pydantic>=2.0.0",
    "email-validator>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-flask>=1.3.0",
    "pytest-env>=1.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
env = [
    "FLASK_ENV=testing",
    "SECRET_KEY=test-secret-key",
    "DB_TYPE=postgres",
    "DATABASE_URL=postgresql://test:test@localhost:5432/test",
    "REDIS_URL=redis://localhost:6379/1",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
