[project]
name = "ims-api"
version = "2.0.0a0"
description = "Item Management System v2 API"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.30.0",
    "alembic==1.13.3",
    "python-jose[cryptography]==3.3.0",
    "passlib[argon2]==1.7.4",
    "python-multipart==0.0.12",
    "httpx==0.27.2",
    "slowapi==0.1.9",
    "redis==5.1.0",
    "structlog==24.4.0",
    "apscheduler==3.10.4",
    "fastapi-mail==1.4.1"
]

[project.optional-dependencies]
test = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "aiosqlite==0.20.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["app"]
